<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:visibility="visible"
    tools:context=".SubmissionActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="?attr/actionBarSize"
      android:theme="@style/ThemeOverlay.AppCompat.Dark"
      app:contentInsetEnd="0dp"
      app:contentInsetStart="0dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/pagetitle"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:background="#000"
      android:fontFamily="sans-serif-condensed-medium"
      android:gravity="center_horizontal"
      android:padding="5dp"
      android:text="@string/project_submission"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="#F1BF73"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/toolbar"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar" />

  <EditText
      android:id="@+id/surname"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:autofillHints=""
      android:background="@drawable/round_egde"
      android:ems="10"
      android:fontFamily="sans-serif-condensed-medium"
      android:hint="@string/surname"
      android:inputType="textPersonName"
      android:padding="5dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/firstname"
      app:layout_constraintTop_toBottomOf="@+id/pagetitle"
      app:layout_constraintVertical_bias="0.0" />

  <EditText
      android:id="@+id/firstname"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:autofillHints=""
      android:background="@drawable/round_egde"
      android:ems="10"
      android:fontFamily="sans-serif-condensed-medium"
      android:hint="@string/firstname"
      android:inputType="textPersonName"
      android:padding="5dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="#090909"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/surname"
      app:layout_constraintHorizontal_bias="0.076"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pagetitle" />

  <EditText
      android:id="@+id/email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:autofillHints=""
      android:background="@drawable/round_egde"
      android:ems="10"
      android:fontFamily="sans-serif-condensed-medium"
      android:hint="@string/email_address"
      android:inputType="textEmailAddress"
      android:padding="5dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.041"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/firstname" />

  <EditText
      android:id="@+id/gitlink"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:autofillHints=""
      android:background="@drawable/round_egde"
      android:ems="10"
      android:fontFamily="sans-serif-condensed-medium"
      android:hint="@string/project_git_link"
      android:inputType="textWebEditText"
      android:padding="5dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <Button
      android:id="@+id/submit"
      android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="70dp"
      android:background="@drawable/button_edge"
      android:ellipsize="none"
      android:fadingEdge="horizontal"
      android:fontFamily="sans-serif-condensed"
      android:lineSpacingExtra="12sp"
      android:text="@string/submitbutton"
      android:textColor="#FFFFFF"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/gitlink" />

</androidx.constraintlayout.widget.ConstraintLayout>