<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

  <androidx.cardview.widget.CardView
      android:layout_width="390dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="12dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp">

    <ImageView
        android:id="@+id/skillbadge"
        android:layout_width="166dp"
        android:layout_height="94dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

      <TextView
          android:id="@+id/name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:layout_marginTop="10dp"
          android:fontFamily="sans-serif-condensed"
          android:padding="2dp"
          android:text="@string/fakile_temitope"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textSize="20sp"
          android:textStyle="bold"
          android:typeface="serif" />

      <TextView
          android:id="@+id/details"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"
          android:fontFamily="sans-serif"
          android:padding="2dp"
          android:text="@string/score_country_region"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textSize="14sp"
          android:textStyle="normal" />


    </LinearLayout>

  </androidx.cardview.widget.CardView>

</LinearLayout>