<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

  <androidx.cardview.widget.CardView
      android:layout_width="390dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      app:cardCornerRadius="4dp"
      app:cardElevation="4dp">

    <ImageView
        android:id="@+id/hourbadge"
        android:layout_width="81dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="276dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_marginStart="100dp">

      <TextView
          android:id="@+id/nameHr"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="10dp"
          android:fontFamily="sans-serif-condensed"
          android:padding="5dp"
          android:text="@string/fakile_temitope"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textSize="20sp"
          android:textStyle="bold"
          android:typeface="serif" />

      <TextView
          android:id="@+id/detailsHr"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="5dp"
          android:fontFamily="sans-serif-smallcaps"
          android:padding="5dp"
          android:text="@string/score_country_region"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textStyle="normal" />


    </LinearLayout>

  </androidx.cardview.widget.CardView>

</LinearLayout>